maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^WallFollowerMaze:4: warning: enclosing method mur has result type Unit: return value discarded
    return true
    ^WallFollowerMaze:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^WallFollowerMaze:6: warning: enclosing method mur has result type Unit: return value discarded
  return false
  ^WallFollowerMaze:12: error: type mismatch;
 found   : Unit
 required: Boolean
    if (mur()){
           ^