maze.wallfollower.WallFollowerMaze.scala.code
def mur(){
  left()
  if (estFaceMur()){
    return true
  }
  return false
}


override def run() {
  while (!estSurBiscuit()){
    if (mur()){
      print(getDirection())
      right()
      if (!estFaceMur()){
        avance()
      }
      else{
        right()
      }
  }
    else{
      if (!estFaceMur()){
        avance()
      }
      else{
        right()
      }
    }
}
}